Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@ view the running application at <a>localhost:9000</a></p>
 <h2>
 <a name="screencasts" class="anchor" href="#screencasts"><span class="octicon octicon-link"></span></a>Screencasts</h2>
 
+<p><a href="https://www.youtube.com/watch?v=6WZrLIXGf3o"><img height="60%" width="60%" src="https://raw.githubusercontent.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/af13c95313c627a59fe94a2a246bf02587985583/public/images/HiHoopsDev.png"></a><br><a href="https://www.youtube.com/watch?v=6WZrLIXGf3o">Developer Screencast</a></p>
+
 <h2>
 <a name="comments-issues" class="anchor" href="#comments-issues"><span class="octicon octicon-link"></span></a>Comments? Issues?</h2>
 
@@ -108,7 +110,7 @@ view the running application at <a>localhost:9000</a></p>
 <h2>
 <a name="wiki-links" class="anchor" href="#wiki-links"><span class="octicon octicon-link"></span></a>Wiki Links</h2>
 
-<p><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/Team-Meetings">Team Meetings</a><br><a href="">User Evaluations</a><br><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/Use-Cases-3.0">Use Cases</a><br><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/Developer-Guide">Developer Guide</a>  </p>
+<p><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/Team-Meetings">Team Meetings</a><br><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/Use-Cases-3.0">Use Cases</a><br><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/Developer-Guide">Developer Guide</a><br><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/User-Guide">User Guide</a><br><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/User-Evaluations">User Evaluations</a>  </p>
       </section>
 
     </div>
