--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>HawaiiHoopsNetwork by hawaiihoopsnetwork</title>
+    <title>Hawaiihoopsnetwork by hawaiihoopsnetwork</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/master/public/images/favicon.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
@@ -32,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>HawaiiHoopsNetwork</h1>
+          <h1>Hawaiihoopsnetwork</h1>
           <p>Connecting basketball players, teams, and leagues on Oahu!</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/hawaiihoopsnetwork">hawaiihoopsnetwork</a></span>
@@ -103,6 +102,8 @@ view the running application at <a>localhost:9000</a></p>
 
 <p><a href="https://www.youtube.com/watch?v=6WZrLIXGf3o"><img height="60%" width="60%" src="https://raw.githubusercontent.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/af13c95313c627a59fe94a2a246bf02587985583/public/images/HiHoopsDev.png"></a><br><a href="https://www.youtube.com/watch?v=6WZrLIXGf3o">Developer Screencast</a></p>
 
+<p><a href="http://youtu.be/x4H4cRifssg"><img height="60%" width="60%" src="https://raw.githubusercontent.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/master/public/images/ScreenShot.png"></a><br><a href="http://youtu.be/x4H4cRifssg">Users Screencast</a></p>
+
 <h2>
 <a name="comments-issues" class="anchor" href="#comments-issues"><span class="octicon octicon-link"></span></a>Comments? Issues?</h2>
 
@@ -111,7 +112,7 @@ view the running application at <a>localhost:9000</a></p>
 <h2>
 <a name="wiki-links" class="anchor" href="#wiki-links"><span class="octicon octicon-link"></span></a>Wiki Links</h2>
 
-<p><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/Team-Meetings">Team Meetings</a><br><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/Use-Cases-3.0">Use Cases</a><br><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/Developer-Guide">Developer Guide</a><br><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/User-Guide">User Guide</a><br><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/User-Evaluations">User Evaluations</a>  </p>
+<p><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/Team-Meetings">Team Meetings</a><br><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/Use-Cases-3.0">Use Cases</a><br><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/Developer-Guide">Developer Guide</a><br><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/User-Guide">User Guide</a><br><a href="http://hawaiihoopsnetwork.github.io/HawaiiHoopsNetwork/">Home Page</a><br><a href="https://github.com/hawaiihoopsnetwork/HawaiiHoopsNetwork/wiki/User-Evaluations">User Evaluations</a>  </p>
       </section>
 
     </div>
